--- a/playbook.yml
+++ b/playbook.yml
@@ -1,14 +1,14 @@
--name: deploy to tomcat
- hosts: web
- become: yes
- tasks:
-   -name: copy from src to dest
-    copy:
-      src: "/var/snap/jenkins/4870/workspace/tomcatmvn_ansi/target/MavenAnsiWebApp.war"
-      dest: "opt/tomcat/webapps/MavenAnsiWebApp.war"
-      remote_src: no
-  -name:
-   systemd: restart tomcat
-     name: tomcat
-     state: restarted
+- name: deploy to tomcat
+  hosts: web
+  become: yes
+  tasks:
+   - name: Copy WAR file to Tomcat
+     copy:
+       src: "/var/snap/jenkins/4870/workspace/tomcatmvn_ansi/target/MavenAnsiWebApp.war"
+       dest: "opt/tomcat/webapps/MavenAnsiWebApp.war"
+       remote_src: no
+  - name:
+    systemd: restart tomcat
+      name: tomcat
+      state: restarted
     
