--- a/playbook.yml
+++ b/playbook.yml
@@ -1,14 +1,15 @@
-- name: Deploy in Tomcat
+- name: deploy to tomcat
   hosts: web
   become: yes
   tasks:
-    - name: Copy WAR to Tomcat
+    - name: copy from src to dest
       copy:
-        src: "/var/snap/jenkins/4870/workspace/tomcatmvn_ansi/target/MavenAnsiWebApp.war"
-        dest: "/opt/tomcat/webapps/MavenAnsiWebApp.war"
+        src: "/var/snap/jenkins/4865/workspace/tomcatmvn_ansi/target/MavenAnsiWebApp.war"
+        dest: "opt/tomcat/webapp/MavenAnsiWebApp.war"
         remote_src: no
-
-    - name: Restart Tomcat
-      systemd:
+        
+    - name:
+      systemd: restart tomcat
         name: tomcat
         state: restarted
+    
